--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
     "react-use": "^17.6.0"
   },
